VUU80: Fix dialog header alignment and border radius

--- a/vuu-ui/packages/vuu-popups/src/dialog-header/DialogHeader.css
+++ b/vuu-ui/packages/vuu-popups/src/dialog-header/DialogHeader.css
@@ -10,8 +10,8 @@
     font-feature-settings: 'ss02' on, 'ss01' on, 'salt' on, 'liga' off;
     font-size: 16px;
     font-weight: 600;
-    padding: 0 6px;
-
+    padding-left: 16px;
+    margin-top: 2px;
 }
   
   .vuuDialogHeader > .Responsive-inner {
